<resources>
    <string name="app_name">Idear</string>
    <string name="settings">Settings</string>
    <string name="capture">Capture</string>
    <string name="library_coming_soon">Library (Coming Soon)</string>
    <string name="cameraview" translatable="false">CameraView</string>
    <string name="voice_1" translatable="false">Voice 1</string>
    <string name="voice_options" translatable="false">Voice Options</string>
    <string name="voice_2" translatable="false">Voice 2</string>
    <string name="voice_3" translatable="false">Voice 3</string>
    <string name="colorblind_mode" translatable="false">Colorblind Mode</string>
    <string name="speed_options">Speed_options</string>
    <string name="library">Library</string>
    <string name="speed_optionsTxt">Speed Options:Txt</string>
    <string name="Voice1">RadioButton1</string>
    <string name="Voice2">Voice2</string>
    <string name="Voice3">RadioButton3</string>
    <string name="speedtxt">speedtxt</string>
    <string name="download_audio_fileSWT">Download Audio File</string>
    <string name="DownBTN">-</string>
    <string name="UpBTN">+</string>
    <string name="button">Button</string>
    <string name="sample_1">"Date\n""Image_Size\n"</string>
    <string name="voice1">Voice1</string>
    <string name="voice3">Voice3</string>
    <string-array name="metadata">
        <item>"9/16/2020"
        "16KB"</item>
    </string-array>
    <string-array name="images">
        <item>"img1"</item>
    </string-array>
</resources>
