<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".SettingsAct"
    tools:visibility="visible">


    <TextView
        android:id="@+id/SettingsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/CaptureBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/camera"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/LibraryBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/Speedtv"
        android:layout_width="189dp"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="Speed Options"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsTV"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvVoice"
        android:layout_width="183dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/voice_options"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDown"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />


    <!--This is the DownloadAudio mode Switch. Currently unused.-->
    <Switch
        android:id="@+id/switchDownloadAudio"
        android:layout_width="231dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/download_audio_fileSWT"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorSwitch"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/DownBTN"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Speedtv"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        android:text="@string/UpBTN"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Speedtv"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textSpeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="Speed"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsTV"
        tools:visibility="visible" />

    <!--This creates the radio button group that is used to select the voice options.-->
    <RadioGroup
        android:id="@+id/VoiceOptionRB"
        android:layout_width="183dp"
        android:layout_height="103dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVoice"
        tools:visibility="visible">

        <!--This is radiobutton 1 voice option.-->
        <RadioButton
            android:id="@+id/Voice1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voice1"
            android:textSize="24sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <!--This is radiobutton 2 voice option.-->
        <RadioButton
            android:id="@+id/Voice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Voice2"
            android:textSize="24sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <!--This is radiobutton 3 voice option.-->
        <RadioButton
            android:id="@+id/Voice3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voice3"
            android:textSize="24sp"
            android:visibility="visible"
            tools:visibility="visible" />
    </RadioGroup>

    <!--This is the Colorblind mode Switch. Currently unused.-->
    <Switch
        android:id="@+id/colorSwitch"
        android:layout_width="233dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/colorblind_mode"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VoiceOptionRB"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <!--This is the button that is used to test the voice to speech within settings.-->
    <Button
        android:id="@+id/testReadBtn"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/play"
        android:rotationY="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUp" />

</androidx.constraintlayout.widget.ConstraintLayout>